fix: role activation & update profile bug